--- a/circle.yml
+++ b/circle.yml
@@ -6,4 +6,4 @@ dependencies:
 
 test:
    override:
-       - ./gradlew clean assembleDebug
+       - ./gradlew clean assembleRelease -PdisablePreDex -i -s -Pcom.android.build.threadPoolSize=1 -Dorg.gradle.parallel=false -Dorg.gradle.jvmargs="-Xms512m -Xmx512m" -Dorg.gradle.daemon=false
