--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,9 @@
 
 dependencies:
    pre:
-      - echo y | android update sdk --no-ui --all --filter "tools"
-      - echo y | android update sdk --no-ui --all --filter "build-tools-24.0.0"
+      - echo y | android update sdk --no-ui --all --filter 
+      "tools",platform-tools,build-tools-24.0.0,android-4,extra-google-m2repository,
+      extra-google-google_play_services,extra-android-support
 
 test:
    override:
