--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,8 @@
-
+machine:
+  environment:
+    ADB_INSTALL_TIMEOUT: 80
+    GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError"'
+    
 dependencies:
    pre:
       - echo y | android update sdk --no-ui --all --filter "tools",platform-tools,build-tools-24.0.0,android-4,extra-google-m2repository,extra-google-google_play_services,extra-android-support
