--- a/circle.yml
+++ b/circle.yml
@@ -5,8 +5,9 @@ machine:
     
 dependencies:
    pre:
-      - echo y | android update sdk --no-ui --all --filter "tools",platform-tools,build-tools-23.0.2,android-23,extra-google-m2repository,extra-google-google_play_services,extra-android-support
-
+        - wget "https://services.gradle.org/distributions/gradle-2.14.1-bin.zip"; unzip gradle-2.14.1-bin.zip
+        - ( sleep 5 && while [ 1 ]; do sleep 1; echo y; done ) | android update sdk --no-ui --all --filter tools,platform-tools,android-24,extra-google-m2repository,extra-google-google_play_services,extra-android-support,extra-android-m2repository
+        - echo y | android update sdk --no-ui --all --filter build-tools-24.0.1
 test:
    override:
        - ./gradlew clean assembleRelease -PdisablePreDex -i -s -Pcom.android.build.threadPoolSize=1 -Dorg.gradle.parallel=false -Dorg.gradle.jvmargs="-Xms512m -Xmx512m" -Dorg.gradle.daemon=false
