--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,9 @@
 machine:
   environment:
-    ADB_INSTALL_TIMEOUT: 80
-    GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError"'
+    ANDROID_HOME: /usr/local/android-sdk-linux
+    PATH: "~/$CIRCLE_PROJECT_REPONAME/gradle-2.14.1/bin:$PATH"
+    TERM: "dumb"
+    ADB_INSTALL_TIMEOUT: "10"
     
 dependencies:
    pre:
