update java version

--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,9 @@ machine:
     PATH: "~/$CIRCLE_PROJECT_REPONAME/gradle-2.14.1/bin:$PATH"
     TERM: "dumb"
     ADB_INSTALL_TIMEOUT: "10"
+  java:
+        version: openjdk8
+
     
 dependencies:
    pre:
