--- a/circle.yml
+++ b/circle.yml
@@ -32,4 +32,5 @@ deployment:
    production:
       branch: master
       commands:
+         - ./gradlew crashlyticsUploadDistributionDebug
          - ./gradlew crashlyticsUploadDistributionDevRelease
